--- a/app/styles/sass/blocks/contacts.sass
+++ b/app/styles/sass/blocks/contacts.sass
@@ -7,6 +7,8 @@
   &-item
     position: relative
     display: flex
+    +media-breakpoint-down(sm)
+      margin-bottom: 20px
     &__icon
       flex: 0 0 48px
       height: 48px
